feat: add partner menu management
